.ao/k8s/guestbook/base/guestbook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-ui
spec:
  replicas: 4
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: guestbook-ui
  template:
    metadata:
      labels:
        app: guestbook-ui
    spec:
      containers:
      - image: gcr.io/heptio-images/ks-guestbook-demo:0.2123123
        name: guestbook-ui
        ports:
        - name: http
          containerPort: 80
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: k8s.scaleway.com/array
                operator: In
                values:
                - PROD
      tolerations:
      - effect: NoSchedule
        key: k8s.scaleway.com/target-array
        operator: Equal
        value: PROD
  backoffLimit: 3
