.ao/k8s/guestbook/base/guestbook-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: guestbook-ui
spec:
  replicas: 4
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: guestbook-ui
  template:
    metadata:
      labels:
        app: guestbook-ui
    spec:
      containers:
      - image: gcr.io/heptio-images/ks-guestbook-demo:0.2
        name: guestbook-ui
        ports:
        - name: http
          containerPort: 80
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: k8s.scaleway.com/array
                operator: In
                values:
                - PROD
      tolerations:
      - effect: NoSchedule
        key: k8s.scaleway.com/target-array
        operator: Equal
        value: PROD
  strategy:
    canary:
      stableService: canary-demo
      canaryService: canary-demo-preview
      trafficRouting:
        nginx:
          stableIngress: ingress
      steps:
      - setWeight: 10
      - pause: {duration: "10s"}
      - setWeight: 100
      - pause: {duration: "10s"}
